@@ -8,16 +8,12 @@ import numexpr as ne
 import carray as ca
 from time import time
 
-# Uncomment the next for disabling threading
-ne.set_num_threads(1)
-ca.blosc_set_num_threads(1)
-
-N = 1e7       # the number of elements in x
+N = 1e8       # the number of elements in x
 clevel = 5    # the compression level
 #sexpr = "(x+1)>0"  # the expression to compute
 sexpr = "(2*x**3+.3*y**2+z+1)<0"  # the expression to compute
 
-print "Evaluating '%s' with 10^%d points" % (sexpr, int(math.log10(N)))
+print "Creating inputs..."
 
 # Create the numpy arrays
 x = np.arange(N)
@@ -32,13 +28,20 @@ if 'y' not in sexpr:
 else:
     t = ca.ctable((cx, cy, cz), names=['x','y','z'])
 
-t0 = time()
-out = eval(sexpr)
-print "Time for plain numpy--> %.3f" % (time()-t0,)
+print "Evaluating '%s' with 10^%d points" % (sexpr, int(math.log10(N)))
+
+# t0 = time()
+# out = eval(sexpr)
+# print "Time for plain numpy--> %.3f" % (time()-t0,)
 
 t0 = time()
 out = ne.evaluate(sexpr)
 print "Time for numexpr (numpy)--> %.3f" % (time()-t0,)
+
+# Uncomment the next for disabling threading
+#ne.set_num_threads(1)
+#ca.blosc_set_num_threads(1)
+#ca.set_num_threads(1)
 
 t0 = time()
 cout = t.eval(sexpr)
